2007-06-08: Jason Long <jlong@messiah.edu>
 * policies.txt: some thoughts on dealing with two different types of
   policy records
 * lib/Mail/DKIM/Policy.pm: default() is now a private class method
 * lib/Mail/DKIM/PublicKey.pm: moved DNS query to DNS.pm
 * lib/Mail/DKIM/Policy.pm: moved DNS query to DNS.pm
 * lib/Mail/DKIM/DNS.pm: new module that does the common DNS lookups

2007-06-07: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Common.pm: change "parse Mail::Address" to my preferred
   "Mail::Address->parse" style
 * t/policy.t: test policy lookup by email address instead of domain;
   test policy lookups on a few well known domains
 * lib/Mail/DKIM/Verifier.pm: minor doc changes; renamed
   fetch_author_policy() to fetch_policy(); fetch_author_policy still
   works for backward compatibility
 * lib/Mail/DKIM/Policy.pm: allow lookups given sender/from addresses
   (location): new method to determine where the policy came from

2007-06-05: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Policy.pm: create the default policy only once;
   (is_implied_default_policy): new method to check whether the policy
   was explicit or implied
   (fetch): get policy record at the Yahoo!-DomainKeys-defined location,
   rather than the location in the not-yet-finished DKIM SSP spec.
 * t/policy.t: test is_implied_default_policy method

 -- VERSION 0.26 --

2007-05-24: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signature.pm: accept and use v=1 tag instead of v=0.5
 * lib/Mail/DKIM/Policy.pm: oops, left a syntax error in here
 * t/signer.t: new expected signature value, since signature now has v=1

2007-05-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/PublicKey.pm: simplify error handling in fetch()
 * lib/Mail/DKIM/Policy.pm: simplify error handling in fetch()

 -- VERSION 0.25 --

2007-05-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/KeyValueList.pm: separator should be "\015\012" not "\n";
   allow splitting on whitespace in a colon-separated list value