@@ -1,3 +1,8 @@
+2007-06-11: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/Verifier.pm: public_key no longer available as a
+   verifier property; use eval block instead of try...otherwise;
+   experimental signatures() method
+
 2007-06-08: Jason Long <jlong@messiah.edu>
  * policies.txt: some thoughts on dealing with two different types of
    policy records
